network-policy/storage/netpol.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-application-to-minio","namespace":"storage"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"application"}}}],"ports":[{"port":9000,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"minio"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-03-02T11:50:45Z"
    generation: 1
    name: allow-application-to-minio
    namespace: storage
    resourceVersion: "50073"
    uid: d79bce6f-30c0-42e9-90db-6e00d30c1281
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: application
      ports:
      - port: 9000
        protocol: TCP
    podSelector:
      matchLabels:
        app: minio
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-application-to-mysql","namespace":"storage"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"application"}}}],"ports":[{"port":3306,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"mysql"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-03-02T11:50:12Z"
    generation: 1
    name: allow-application-to-mysql
    namespace: storage
    resourceVersion: "50033"
    uid: 88a5519e-97c1-47aa-9904-41f9f3cbae3b
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: application
      ports:
      - port: 3306
        protocol: TCP
    podSelector:
      matchLabels:
        app: mysql
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-dns-egress","namespace":"storage"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"kube-system"}},"podSelector":{"matchLabels":{"k8s-app":"kube-dns"}}}]}],"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-03-02T11:44:06Z"
    generation: 1
    name: allow-dns-egress
    namespace: storage
    resourceVersion: "49629"
    uid: 2f52a23a-b8d8-4d23-98c1-eb852f8e97c5
  spec:
    egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    podSelector: {}
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-egress","namespace":"storage"},"spec":{"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-03-02T11:41:10Z"
    generation: 1
    name: default-deny-egress
    namespace: storage
    resourceVersion: "49437"
    uid: 6ea60ca6-f6be-494d-abf8-a83ae5070978
  spec:
    podSelector: {}
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"storage"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-03-02T11:41:10Z"
    generation: 1
    name: default-deny-ingress
    namespace: storage
    resourceVersion: "49436"
    uid: fcacac93-40f4-475f-a0e1-0e1907d86f2c
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
